--- a/index_pt_br.html
+++ b/index_pt_br.html
@@ -17,8 +17,8 @@
   <script src="js/prettify.js"></script>
   <script src="js/jquery.flexslider.js"></script>
   <script src="js/bootstrap-affix.js"></script>
-  <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
-    <script src="js/scripts.js"></script>
+  <script src="js/jquery.prettyPhoto.js"></script> 
+    <script src="js/script.js"></script>
 
     <!--[if IE 8]>
     <link rel="stylesheet" href="css/ie.css" />
@@ -38,26 +38,25 @@
 <header class="header">
   <div class="container">
   <div class="row">
-  <article class="span4"><a class="brand" href="/help/" target="_blank"></a></article>
- <article class="span6">
- <h1><img alt="" src="img/joomla_logo.png">Documentação do Joomla 3.x</h1>
+  <article class="span4"><a class="brand" href="/help/" target="_blank"><img alt="" src="img/logo-monster.jpg"></a></article>
+  <article class="span6">
+  <h1>Documentação do Joomla 3.x</h1>
   </article> 
-  <article class="span2">
-    <div class="languages pull-right">
-      <!-- <span class="lang_label">Language: </span> --><div id="lang_icon"><b>Pt</b><i class="icon-angle-down"></i></div>
-      <ul id="lang_list">
-        <li><a href="index_en.html"><span>English </span><img src="img/flags/gb.png" height="14" width="22" alt="en"></a></li>
-        <li><a href="index_es.html"><span>Español </span><img src="img/flags/es.png" height="14" width="22" alt="es"></a></li>
-        <li><a href="index_de.html"><span>Deutsch </span><img src="img/flags/de.png" height="14" width="22" alt="de"></a></li>
-        <li><a href="index_ru.html"><span>Русский </span><img src="img/flags/ru.png" height="14" width="22" alt="ru"></a></li>
-        <li><a href="index_fr.html"><span>Français</span><img src="img/flags/fr.png" height="14" width="22" alt="fr"></a></li>
-		<li><a href="index_pl.html"><span>Polski</span><img src="img/flags/pl.png" height="14" width="22" alt="pl"></a></li>
-		<li  class="active"><a href="index_pt_br.html"><span>Português</span><img src="img/flags/pt.png" height="14" width="22" alt="pt"></a></li>
-		<li><a href="index_tr.html"><span>Türk</span><img src="img/flags/tr.png" height="14" width="22" alt="tr"></a></li>
-		<li><a href="index_it.html"><span>Italiano</span><img src="img/flags/it.png" height="14" width="22" alt="it"></a></li>
-      </ul>
-    </div>
-  </article>   
+  <article class="span2">  
+       <div id="languages" class="select-menu pull-right">
+        <div class="select-menu_icon"><b>En</b><i class="icon-angle-down"></i></div>
+        <ul class="select-menu_list">
+        </ul>
+      </div>
+      <div id="versions" class="select-menu pull-right">
+        <div class="select-menu_icon"><b>v3-0</b><i class="icon-angle-down"></i></div>
+        <ul class="select-menu_list">
+          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-0/index_pt_br.html"><span>v3-0</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v2-4/index_pt_br.html"><span>v2-4</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v2-3/index_pt_br.html"><span>v2-3</span></a></li>
+        </ul>
+      </div>
+    </article>  
   </div>    
   </div>
 </header>
@@ -174,7 +173,7 @@
 <!-- block-started
 ================================================== -->
 <section class="block-started"  id="introduction">
-  <h2><i class="icon-info-sign"></i> Introdução <small><i>O que pode ser encontrado neste pacote e onde ele pode ser usado</i></small></h2>
+  <h2 class="item1"><i class="icon-info-sign"></i> Introdução <small><i>O que pode ser encontrado neste pacote e onde ele pode ser usado</i></small></h2>
   <p>Obrigado por comprar o template Joomla. Essa documentação consiste em várias partes e lhe mostra o processo inteiro de como configurar e administrar o site em Joomla do zero. Nós demos o nosso melhor para fazer esse manual o mais claro e fácil de se seguir possível. </p>
   
   <div id="joomla_cms_desc">
@@ -219,7 +218,7 @@
 </section>
 
 <section class="block-templates" id="prepare">  
-  <h2><i class="icon-check"></i> Preparar <small><i>Do que você precisa para fazer isso funcionar</i></small></h2>
+  <h2 class="item2"><i class="icon-check"></i> Preparar <small><i>Do que você precisa para fazer isso funcionar</i></small></h2>
   <p>Antes que você comece a configurar o seu site Joomla, por favor, certifique-se de que você estará totalmente preparado. Por favor, complete as seguintes etapas de preparação:</p>
 
   <div id="software">
@@ -250,7 +249,7 @@
 </section>
 
 <section class="block-templates" id="getting_started">  
-  <h2><i class="icon-play"></i> Começando <small><i>Onde clicar para fazer isso funcionar</i></small></h2>
+  <h2 class="item3"><i class="icon-play"></i> Começando <small><i>Onde clicar para fazer isso funcionar</i></small></h2>
 
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
@@ -542,7 +541,7 @@
 
 
 <section class="block-templates" id="modules_config">
-  <h2><i class="icon-cog"></i> Configurando Módulos</h2>
+  <h2 class="item4"><i class="icon-cog"></i> Configurando Módulos</h2>
 
     <p>O layout do site em Joomla pe dividido em duas partes principais - seção do conteúdo e posições do módulo (verifique o mapa das posições do módulo abaixo para mais detalhes). Os módulos em Joomla são usados para saída de conteúdo em posições preparadas.</p>
   <div id="positions_map">
@@ -975,7 +974,7 @@
 
 
 <section id="extensions" class="block-templates">
-  <h2><i class="icon-fullscreen"></i> Extensões</h2>
+  <h2 class="item5"><i class="icon-fullscreen"></i> Extensões</h2>
 
   <p>A funcionalidade do site Joomla pode ser melhorada usando várias extensões do Joomla. Alguns deles são frequentemente utilizados em nossos templates. Essa seção irá lhe ensinar como mexer com extensões padrões.</p>
 
@@ -1100,7 +1099,7 @@
 </section>
 
 <section id="configuring-pages" class="block-templates">
-  <h2><i class="icon-wrench"></i> Páginas de Configuração</h2>
+  <h2 class="item6"><i class="icon-wrench"></i> Páginas de Configuração</h2>
   
     <!-- Gallery page -->
   
@@ -1149,7 +1148,7 @@
 
 
 <section id="template-settings">
-  <h2><i class="icon-cogs"></i> Configurações do Template</h2>
+  <h2 class="item7"><i class="icon-cogs"></i> Configurações do Template</h2>
 
   <p>Cada template do Joomla possui suas opções de configurações. Elas podem ser ajustadas para configurar as classes do layout do tema, as tags de tipografia, algumas funções adicionais, etc. As opções do template podem ser acessadas através do painel de controle do Joomla na seção &quot;Extensões &gt; Gerenciador de Template (em Inglês, &quot;<b>Extensions > Template Manager</b>&quot;.)</p>
 
@@ -1203,7 +1202,7 @@
 
 
 <section id="addendum" class="block-templates">
-  <h2><i class="icon-question-sign"></i> Apêndice  <small>onde obter ajuda, suporte e informação adicional</small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Apêndice  <small>onde obter ajuda, suporte e informação adicional</small> </h2>
 
   <p>Nós demos o nosso melhor para fazer desse documento o mais claro possível. Contudo, se você tiver qualquer dificuldade com um template do Joomla ou quaisquer sugestões com relação à melhoria do template ou documentação, sinta-se livre para entrar em contato com a nossa equipe de suporte através da:</p>
   
