--- a/index_en.html
+++ b/index_en.html
@@ -17,8 +17,8 @@
   <script src="js/prettify.js"></script>
   <script src="js/jquery.flexslider.js"></script>
   <script src="js/bootstrap-affix.js"></script>
-  <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
-    <script src="js/scripts.js"></script>
+  <script src="js/jquery.prettyPhoto.js"></script> 
+  <script src="js/script.js"></script>
 
     <!--[if IE 8]>
     <link rel="stylesheet" href="css/ie.css" />
@@ -38,26 +38,25 @@
 <header class="header">
   <div class="container">
   <div class="row">
-  <article class="span4"><a class="brand" href="/help/" target="_blank"></a></article>
- <article class="span6">
- <h1><img alt="" src="img/joomla_logo.png">Joomla 3.x Documentation</h1>
+  <article class="span4"><a class="brand" href="/help/" target="_blank"><img alt="" src="img/logo-monster.jpg"></a></article>
+  <article class="span6">
+  <h1>Joomla 3.x Documentation</h1>
   </article> 
-  <article class="span2">
-    <div class="languages pull-right">
-      <!-- <span class="lang_label">Language: </span> --><div id="lang_icon"><b>En</b><i class="icon-angle-down"></i></div>
-      <ul id="lang_list">
-        <li class="active"><a href="index_en.html"><span>English </span><img src="img/flags/gb.png" height="14" width="22" alt="en"></a></li>
-        <li><a href="index_es.html"><span>Español </span><img src="img/flags/es.png" height="14" width="22" alt="es"></a></li>
-        <li><a href="index_de.html"><span>Deutsch </span><img src="img/flags/de.png" height="14" width="22" alt="de"></a></li>
-        <li><a href="index_ru.html"><span>Русский </span><img src="img/flags/ru.png" height="14" width="22" alt="ru"></a></li>
-        <li><a href="index_fr.html"><span>Français</span><img src="img/flags/fr.png" height="14" width="22" alt="fr"></a></li>
-    		<li><a href="index_pl.html"><span>Polski</span><img src="img/flags/pl.png" height="14" width="22" alt="pl"></a></li>
-    		<li><a href="index_pt_br.html"><span>Português</span><img src="img/flags/pt.png" height="14" width="22" alt="pt"></a></li>
-    		<li><a href="index_tr.html"><span>Türk</span><img src="img/flags/tr.png" height="14" width="22" alt="tr"></a></li>
-    		<li><a href="index_it.html"><span>Italiano</span><img src="img/flags/it.png" height="14" width="22" alt="it"></a></li>
-      </ul>
-    </div>
-  </article>   
+  <article class="span2">  
+       <div id="languages" class="select-menu pull-right">
+        <div class="select-menu_icon"><b>En</b><i class="icon-angle-down"></i></div>
+        <ul class="select-menu_list">
+        </ul>
+      </div>
+      <div id="versions" class="select-menu pull-right">
+        <div class="select-menu_icon"><b>v3-0</b><i class="icon-angle-down"></i></div>
+        <ul class="select-menu_list">
+          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-0/index_en.html"><span>v3-0</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v2-4/index_en.html"><span>v2-4</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v2-3/index_en.html"><span>v2-3</span></a></li>
+        </ul>
+      </div>
+    </article>  
   </div>    
   </div>
 </header>
@@ -174,7 +173,7 @@
 <!-- block-started
 ================================================== -->
 <section class="block-started"  id="introduction">
-  <h2><i class="icon-info-sign"></i> Introduction <small><i>What can be found in this package and what it can be used for</i></small></h2>
+  <h2 class="item1"><i class="icon-info-sign"></i> Introduction <small><i>What can be found in this package and what it can be used for</i></small></h2>
   <p>Thank you for purchasing a Joomla template. This documentation consists of several parts and shows you the entire process of how to set up and administer a Joomla Web site from scratch. We did our best to make this manual as clear and easy to follow as possible. </p>
   
   <div id="joomla_cms_desc">
@@ -219,7 +218,7 @@
 </section>
 
 <section class="block-templates" id="prepare">  
-  <h2><i class="icon-check"></i> Prepare <small><i>What do you need to make this work</i></small></h2>
+  <h2 class="item2"><i class="icon-check"></i> Prepare <small><i>What do you need to make this work</i></small></h2>
   <p>Before you proceed to setting up your Joomla Web site please make sure you are fully prepared. Please complete the following preparation steps:</p>
 
   <div id="software">
@@ -249,7 +248,7 @@
 </section>
 
 <section class="block-templates" id="getting_started">  
-  <h2><i class="icon-play"></i> Getting Started <small><i>What to click to make this work</i></small></h2>
+  <h2 class="item3"><i class="icon-play"></i> Getting Started <small><i>What to click to make this work</i></small></h2>
 
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
@@ -528,7 +527,7 @@
 
 
 <section class="block-templates" id="modules_config">
-  <h2><i class="icon-cog"></i> Configuring Modules</h2>
+  <h2 class="item4"><i class="icon-cog"></i> Configuring Modules</h2>
 
     <p>Joomla website layout is divided into two main parts - content section and module positions (check the module positions map below for more details). Modules in Joomla are used to output content into prepared positions.</p>
   <div id="positions_map">
@@ -957,7 +956,7 @@
 
 
 <section id="extensions" class="block-templates">
-  <h2><i class="icon-fullscreen"></i> Extensions</h2>
+  <h2 class="item5"><i class="icon-fullscreen"></i> Extensions</h2>
 
   <p>Joomla website functionality can be enhanced using various Joomla extensions. Some of them are often used in our templates. This section will teach you how to work with custom extensions.</p>
 
@@ -1084,7 +1083,7 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
 </section>
 
 <section id="configuring-pages" class="block-templates">
-  <h2><i class="icon-wrench"></i> Configuring Pages</h2>
+  <h2 class="item6"><i class="icon-wrench"></i> Configuring Pages</h2>
   
     <!-- Gallery page -->
   
@@ -1131,7 +1130,7 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
 
 
 <section id="template-settings">
-  <h2><i class="icon-cogs"></i> Template Settings</h2>
+  <h2 class="item7"><i class="icon-cogs"></i> Template Settings</h2>
 
   <p>Each Joomla template has its configuration options. They can be adjusted to set up theme layout classes, typography tags, some additional features, etc. Template options can be accessed through the Joomla administration panel in the <b>Extensions > Template Manager</b> section.</p>
 
@@ -1185,7 +1184,7 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
 
 
 <section id="addendum" class="block-templates">
-  <h2><i class="icon-question-sign"></i> Addendum  <small>where to get help, support and additional information</small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Addendum  <small>where to get help, support and additional information</small> </h2>
 
   <p>We did our best to make this documentation as clear as possible. However, if you have any difficulties with the Joomla template or any suggestions on improving the template or the documentation, feel free to contact our support team through the:</p>
   
@@ -1250,6 +1249,18 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
   <div id="back-top">
     <a href="#"><i class="icon-double-angle-up"></i></a>
   </div>
+
+
+<div class="modal_bg"></div>
+<div class="modal">
+  <div class="modal-header">
+    <span class="modal_remove pull-right"><i class="icon-remove"></i></span>
+    <h3>Choose language</h3>
+  </div>
+  <div class="modal-body">
+    <ul id="modal_languages" class="nav nav-list bs-docs-sidenav"></ul>
+  </div>
+</div>
     
 <!-- <script src="js/bootstrap-scrollspy.js"></script>  -->
 
