--- a/index_fr.html
+++ b/index_fr.html
@@ -17,8 +17,8 @@
   <script src="js/prettify.js"></script>
   <script src="js/jquery.flexslider.js"></script>
   <script src="js/bootstrap-affix.js"></script>
-  <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
-    <script src="js/scripts.js"></script>
+  <script src="js/jquery.prettyPhoto.js"></script> 
+  <script src="js/script.js"></script>
 
     <!--[if IE 8]>
     <link rel="stylesheet" href="css/ie.css" />
@@ -38,26 +38,25 @@
 <header class="header">
   <div class="container">
   <div class="row">
-  <article class="span4"><a class="brand" href="/help/" target="_blank"></a></article>
- <article class="span6">
- <h1><img alt="" src="img/joomla_logo.png">Documentation Joomla 3.x</h1>
+  <article class="span4"><a class="brand" href="/help/" target="_blank"><img alt="" src="img/logo-monster.jpg"></a></article>
+  <article class="span6">
+  <h1>Documentation Joomla 3.x</h1>
   </article> 
-  <article class="span2">
-    <div class="languages pull-right">
-      <!-- <span class="lang_label">Language: </span> --><div id="lang_icon"><b>Fr</b><i class="icon-angle-down"></i></div>
-      <ul id="lang_list">
-		<li><a href="index_en.html"><span>English </span><img src="img/flags/gb.png" height="14" width="22" alt="en"></a></li>
-        <li><a href="index_es.html"><span>Español </span><img src="img/flags/es.png" height="14" width="22" alt="es"></a></li>
-        <li><a href="index_de.html"><span>Deutsch </span><img src="img/flags/de.png" height="14" width="22" alt="de"></a></li>
-        <li><a href="index_ru.html"><span>Русский </span><img src="img/flags/ru.png" height="14" width="22" alt="ru"></a></li>
-        <li class="active"><a href="index_fr.html"><span>Français</span><img src="img/flags/fr.png" height="14" width="22" alt="fr"></a></li>
-		<li><a href="index_pl.html"><span>Polski</span><img src="img/flags/pl.png" height="14" width="22" alt="pl"></a></li>
-		<li><a href="index_pt_br.html"><span>Português</span><img src="img/flags/pt.png" height="14" width="22" alt="pt"></a></li>
-		<li><a href="index_tr.html"><span>Türk</span><img src="img/flags/tr.png" height="14" width="22" alt="tr"></a></li>
-		<li><a href="index_it.html"><span>Italiano</span><img src="img/flags/it.png" height="14" width="22" alt="it"></a></li>
-      </ul>
-    </div>
-  </article>   
+  <article class="span2">  
+       <div id="languages" class="select-menu pull-right">
+        <div class="select-menu_icon"><b>Fr</b><i class="icon-angle-down"></i></div>
+        <ul class="select-menu_list">
+        </ul>
+      </div>
+      <div id="versions" class="select-menu pull-right">
+        <div class="select-menu_icon"><b>v3-0</b><i class="icon-angle-down"></i></div>
+        <ul class="select-menu_list">
+          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-0/index_fr.html"><span>v3-0</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v2-4/index_fr.html"><span>v2-4</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v2-3/index_fr.html"><span>v2-3</span></a></li>
+        </ul>
+      </div>
+    </article>  
   </div>    
   </div>
 </header>
@@ -174,7 +173,7 @@
 <!-- block-started
 ================================================== -->
 <section class="block-started"  id="introduction">
-  <h2><i class="icon-info-sign"></i> Introduction <small><i>Ce qui se trouve dans ce paquet et ce que l'on peut en faire</i></small></h2>
+  <h2 class="item1"><i class="icon-info-sign"></i> Introduction <small><i>Ce qui se trouve dans ce paquet et ce que l'on peut en faire</i></small></h2>
   <p>Merci d'avoir acheté de modèle pour Joomla. Cette documentation est en plusieurs parties et vous montre en détails comment installer et administrer un site web Joomla de A à Z. Nous avons fait de notre mieux pour rendre ce manuel aussi clair et facile à suivre que possible.</p>
   
   <div id="joomla_cms_desc">
@@ -219,7 +218,7 @@
 </section>
 
 <section class="block-templates" id="prepare">  
-  <h2><i class="icon-check"></i> Préparation <small><i>Ce dont vous avez besoin pour que tout fonctionne</i></small></h2>
+  <h2 class="item2"><i class="icon-check"></i> Préparation <small><i>Ce dont vous avez besoin pour que tout fonctionne</i></small></h2>
   <p>Avant de procéder à l'installation de votre site web Joomla, veuillez vous assurer d'être complètement préparé. Veuillez compléter les étapes de préparation suivantes :</p>
 
   <div id="software">
@@ -249,7 +248,7 @@
 </section>
 
 <section class="block-templates" id="getting_started">  
-  <h2><i class="icon-play"></i> Démarrage <small><i>Sur quoi cliquer pour que tout fonctionne</i></small></h2>
+  <h2 class="item3"><i class="icon-play"></i> Démarrage <small><i>Sur quoi cliquer pour que tout fonctionne</i></small></h2>
 
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
@@ -532,7 +531,7 @@
 
 
 <section class="block-templates" id="modules_config">
-  <h2><i class="icon-cog"></i> Configuration des modules</h2>
+  <h2 class="item4"><i class="icon-cog"></i> Configuration des modules</h2>
 
     <p>Le plan d'un site web Joomla se divise en deux parties principales : la section du contenu et les positions de modules (consultez la carte de positions de module ci-dessous pour plus de détails). Les modules de Joomla servent à afficher du contenu dans des positions préparées.</p>
   <div id="positions_map">
@@ -961,7 +960,7 @@
 
 
 <section id="extensions" class="block-templates">
-  <h2><i class="icon-fullscreen"></i> Extensions</h2>
+  <h2 class="item8"><i class="icon-fullscreen"></i> Extensions</h2>
 
   <p>La fonctionnalité d'un site web Joomla peut être améliorée en utilisant diverses extensions Joomla. Certaines d'entre elles sont souvent utilisées dans nos modèles. Cette section vous montrera comment utiliser des extensions personnalisées.</p>
 
@@ -1086,7 +1085,7 @@
 </section>
 
 <section id="configuring-pages" class="block-templates">
-  <h2><i class="icon-wrench"></i> Configuration des pages</h2>
+  <h2 class="item5"><i class="icon-wrench"></i> Configuration des pages</h2>
   
     <!-- Gallery page -->
   
@@ -1133,7 +1132,7 @@
 
 
 <section id="template-settings">
-  <h2><i class="icon-cogs"></i> Réglages du modèle</h2>
+  <h2 class="item6"><i class="icon-cogs"></i> Réglages du modèle</h2>
 
   <p>Chaque modèle pour Joomla a ses propres options de configuration. Elles peuvent être ajustées pour configurer des classes d'agencement de thème, des balises typographiques, certaines fonctionnalités additionnelles, etc. Les options du modèle sont accessibles dans la section « <b>Extensions > Gestionnaire de modèles Manager</b> » (« <b>Extensions > Template Manager</b> » du panneau d'administration de Joomla.</p>
 
@@ -1187,7 +1186,7 @@
 
 
 <section id="addendum" class="block-templates">
-  <h2><i class="icon-question-sign"></i> Addendum  <small>aide, support, et renseignements supplémentaires</small> </h2>
+  <h2 class="item7"><i class="icon-question-sign"></i> Addendum  <small>aide, support, et renseignements supplémentaires</small> </h2>
 
   <p>Nous avons fait de notre mieux pour que cette documentation soit aussi claire que possible. Toutefois, si vous avez des difficultés avec un modèle pour Joomla, ou toute suggestion d'amélioration de la documentation ou du modèle, n'hésitez pas à contacter notre équipe de support via :</p>
   
