--- a/index_it.html
+++ b/index_it.html
@@ -17,8 +17,8 @@
   <script src="js/prettify.js"></script>
   <script src="js/jquery.flexslider.js"></script>
   <script src="js/bootstrap-affix.js"></script>
-  <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
-    <script src="js/scripts.js"></script>
+  <script src="js/jquery.prettyPhoto.js"></script> 
+    <script src="js/script.js"></script>
 
     <!--[if IE 8]>
     <link rel="stylesheet" href="css/ie.css" />
@@ -38,26 +38,25 @@
 <header class="header">
   <div class="container">
   <div class="row">
-  <article class="span4"><a class="brand" href="/help/" target="_blank"></a></article>
- <article class="span6">
- <h1><img alt="" src="img/joomla_logo.png">Documentazione Joomla 3.x</h1>
+  <article class="span4"><a class="brand" href="/help/" target="_blank"><img alt="" src="img/logo-monster.jpg"></a></article>
+  <article class="span6">
+  <h1>Documentazione Joomla 3.x</h1>
   </article> 
-  <article class="span2">
-    <div class="languages pull-right">
-      <!-- <span class="lang_label">Language: </span> --><div id="lang_icon"><b>It</b><i class="icon-angle-down"></i></div>
-      <ul id="lang_list">
-		<li><a href="index_en.html"><span>English </span><img src="img/flags/gb.png" height="14" width="22" alt="en"></a></li>
-        <li><a href="index_es.html"><span>Español </span><img src="img/flags/es.png" height="14" width="22" alt="es"></a></li>
-        <li><a href="index_de.html"><span>Deutsch </span><img src="img/flags/de.png" height="14" width="22" alt="de"></a></li>
-        <li><a href="index_ru.html"><span>Русский </span><img src="img/flags/ru.png" height="14" width="22" alt="ru"></a></li>
-        <li><a href="index_fr.html"><span>Français</span><img src="img/flags/fr.png" height="14" width="22" alt="fr"></a></li>
-		<li><a href="index_pl.html"><span>Polski</span><img src="img/flags/pl.png" height="14" width="22" alt="pl"></a></li>
-		<li><a href="index_pt_br.html"><span>Português</span><img src="img/flags/pt.png" height="14" width="22" alt="pt"></a></li>
-		<li><a href="index_tr.html"><span>Türk</span><img src="img/flags/tr.png" height="14" width="22" alt="tr"></a></li>
-		<li class="active"><a href="index_it.html"><span>Italiano</span><img src="img/flags/it.png" height="14" width="22" alt="it"></a></li>
-      </ul>
-    </div>
-  </article>   
+  <article class="span2">  
+       <div id="languages" class="select-menu pull-right">
+        <div class="select-menu_icon"><b>It</b><i class="icon-angle-down"></i></div>
+        <ul class="select-menu_list">
+        </ul>
+      </div>
+      <div id="versions" class="select-menu pull-right">
+        <div class="select-menu_icon"><b>v3-0</b><i class="icon-angle-down"></i></div>
+        <ul class="select-menu_list">
+          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-0/index_it.html"><span>v3-0</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v2-4/index_it.html"><span>v2-4</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v2-3/index_it.html"><span>v2-3</span></a></li>
+        </ul>
+      </div>
+    </article>  
   </div>    
   </div>
 </header>
@@ -174,7 +173,7 @@
 <!-- block-started
 ================================================== -->
 <section class="block-started"  id="introduction">
-  <h2><i class="icon-info-sign"></i> Introduzione<small><i> I contenuti di questo pacchetto e il loro utilizzo</i></small></h2>
+  <h2 class="item1"><i class="icon-info-sign"></i> Introduzione<small><i> I contenuti di questo pacchetto e il loro utilizzo</i></small></h2>
   <p>Grazie per avere acquistato un modello Joomla. Questa documentazione comprende diverse sezioni che illustrano l’intero processo di configurazione e ammnistrazione di un sito Web Joomlaa partire dalla sua installazione. Abbiamo fatto il possibile per rendere questo manuale chiaro e semplice da usare.</p>
   
   <div id="joomla_cms_desc">
@@ -219,7 +218,7 @@
 </section>
 
 <section class="block-templates" id="prepare">  
-  <h2><i class="icon-check"></i> Preparazione <small><i>Quello che ti serve per continuare</i></small></h2>
+  <h2 class="item2"><i class="icon-check"></i> Preparazione <small><i>Quello che ti serve per continuare</i></small></h2>
   <p>Prima di procedere nell’impostazione del tuo sito Web Joomlaassicurarsi di essere ben preparati. Bisognerà, quindi, completare le seguenti fasi di preparazione prima di procedere:</p>
 
   <div id="software">
@@ -249,7 +248,7 @@
 </section>
 
 <section class="block-templates" id="getting_started">  
-  <h2><i class="icon-play"></i> Per iniziare <small><i>I comandi indispensabili</i></small></h2>
+  <h2 class="item3"><i class="icon-play"></i> Per iniziare <small><i>I comandi indispensabili</i></small></h2>
 
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
@@ -531,7 +530,7 @@
 
 
 <section class="block-templates" id="modules_config">
-  <h2><i class="icon-cog"></i> Moduli Configuranti</h2>
+  <h2 class="item4"><i class="icon-cog"></i> Moduli Configuranti</h2>
 
     <p>Il layout di un sito Joomla si compone di due parti principali–la sezione dei contenutie le posizioni del modulo (visualizzate la mappadelle posizioni delmodulo per maggiori dettagli). I moduli in Joomla sono usati per collocare i contenuti in posizioni stabilite.</p>
   <div id="positions_map">
@@ -960,7 +959,7 @@
 
 
 <section id="extensions" class="block-templates">
-  <h2><i class="icon-fullscreen"></i> Estensioni</h2>
+  <h2 class="item5"><i class="icon-fullscreen"></i> Estensioni</h2>
 
   <p>Le funzionalità di un sito Joomla possono essere migliorate dalle varie estensioni disponibili.Alcune di esse sono usate spesso nei nostri modelli. Questa sezione vi spiegherà come personalizzare la vostra pagina con le estensioni.</p>
 
@@ -1085,7 +1084,7 @@
 </section>
 
 <section id="configuring-pages" class="block-templates">
-  <h2><i class="icon-wrench"></i> Pagine Configuranti</h2>
+  <h2 class="item6"><i class="icon-wrench"></i> Pagine Configuranti</h2>
   
     <!-- Gallery page -->
   
@@ -1132,7 +1131,7 @@
 
 
 <section id="template-settings">
-  <h2><i class="icon-cogs"></i>  Impostazioni Modello</h2>
+  <h2 class="item7"><i class="icon-cogs"></i>  Impostazioni Modello</h2>
 
   <p>Ogni modello Joomla ha le proprie opzioni di configurazione. Possono essere adattateper impostare le classi di layout del tema, il carattere dei tag, alcune caratteristiche aggiuntive, ecc. Per accedere alle impostazioni del modellodal pannello di amministrazione di Joomla dalla sezione <b>Estensioni > Gestione Modello (Extensions > Template Manager)</b>.</p>
 
@@ -1186,7 +1185,7 @@
 
 
 <section id="addendum" class="block-templates">
-  <h2><i class="icon-question-sign"></i> Appendice  <small>dove trovare aiuto, supportoe informazioni aggiuntive</small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Appendice  <small>dove trovare aiuto, supportoe informazioni aggiuntive</small> </h2>
 
   <p>Abbiamo dato il Massimo per rendere questa documentazione più chiara possibile. Tuttavia, in caso di difficoltà con il modello Joomla o per qualsiasi suggerimento su come migliorare il modello o la documentazione, contattate pureil nostro team di supporto tramite:</p>
   
