--- a/index_tr.html
+++ b/index_tr.html
@@ -38,26 +38,25 @@
 <header class="header">
   <div class="container">
   <div class="row">
-  <article class="span4"><a class="brand" href="/help/" target="_blank"></a></article>
- <article class="span6">
- <h1><img alt="" src="img/joomla_logo.png">Joomla 3.x Dokümantasyon</h1>
+  <article class="span4"><a class="brand" href="/help/" target="_blank"><img alt="" src="img/logo-monster.jpg"></a></article>
+  <article class="span6">
+  <h1>Joomla 3.x Dokümantasyon</h1>
   </article> 
-  <article class="span2">
-    <div class="languages pull-right">
-      <!-- <span class="lang_label">Language: </span> --><div id="lang_icon"><b>Tr</b><i class="icon-angle-down"></i></div>
-      <ul id="lang_list">
-        <li><a href="index_en.html"><span>English </span><img src="img/flags/gb.png" height="14" width="22" alt="en"></a></li>
-        <li><a href="index_es.html"><span>Español </span><img src="img/flags/es.png" height="14" width="22" alt="es"></a></li>
-        <li><a href="index_de.html"><span>Deutsch </span><img src="img/flags/de.png" height="14" width="22" alt="de"></a></li>
-        <li><a href="index_ru.html"><span>Русский </span><img src="img/flags/ru.png" height="14" width="22" alt="ru"></a></li>
-        <li><a href="index_fr.html"><span>Français</span><img src="img/flags/fr.png" height="14" width="22" alt="fr"></a></li>
-		<li><a href="index_pl.html"><span>Polski</span><img src="img/flags/pl.png" height="14" width="22" alt="pl"></a></li>
-		<li><a href="index_pt_br.html"><span>Português</span><img src="img/flags/pt.png" height="14" width="22" alt="pt"></a></li>
-		<li class="active"><a href="index_tr.html"><span>Türk</span><img src="img/flags/tr.png" height="14" width="22" alt="tr"></a></li>
-		<li><a href="index_it.html"><span>Italiano</span><img src="img/flags/it.png" height="14" width="22" alt="it"></a></li>
-      </ul>
-    </div>
-  </article>   
+  <article class="span2">  
+       <div id="languages" class="select-menu pull-right">
+        <div class="select-menu_icon"><b>En</b><i class="icon-angle-down"></i></div>
+        <ul class="select-menu_list">
+        </ul>
+      </div>
+      <div id="versions" class="select-menu pull-right">
+        <div class="select-menu_icon"><b>v3-0</b><i class="icon-angle-down"></i></div>
+        <ul class="select-menu_list">
+          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-0/index_tr.html"><span>v3-0</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v2-4/index_tr.html"><span>v2-4</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v2-3/index_tr.html"><span>v2-3</span></a></li>
+        </ul>
+      </div>
+    </article>  
   </div>    
   </div>
 </header>
@@ -174,7 +173,7 @@
 <!-- block-started
 ================================================== -->
 <section class="block-started"  id="introduction">
-  <h2><i class="icon-info-sign"></i> Giriş <small><i>Bu paket içerisinde neler bulabilirsiniz ve neler kullanılabilir.</i></small></h2>
+  <h2 class="item1"><i class="icon-info-sign"></i> Giriş <small><i>Bu paket içerisinde neler bulabilirsiniz ve neler kullanılabilir.</i></small></h2>
   <p>Joomla Şablonu aldığınız için teşekkür ederiz. Bu belgeler bir kaç bölümden oluşmaktadır, Joomla Web sitesinin kurulumu ve sıfırdan nasıl yönetileceğine dair olan süreci göstermektedir. Bizler mümkün olduğunca açık ve kolay tekip edilebilmesi adına bu manuel klavuzu elimizden gelenin en iyisini sizler için yarattık. </p>
   
   <div id="joomla_cms_desc">
@@ -219,7 +218,7 @@
 </section>
 
 <section class="block-templates" id="prepare">  
-  <h2><i class="icon-check"></i> Hazırlamak <small><i>Bu işi yapabilmek için neye ihtiyacınız var</i></small></h2>
+  <h2 class="item2"><i class="icon-check"></i> Hazırlamak <small><i>Bu işi yapabilmek için neye ihtiyacınız var</i></small></h2>
   <p>Joomla web sitesi yapımına başlamadan önce tam olarak hazır olduğunuzdan emin olun. Lütfen, aşşağıdaki hazırlık adımlarını tamamlayın:</p>
 
   <div id="software">
@@ -249,7 +248,7 @@
 </section>
 
 <section class="block-templates" id="getting_started">  
-  <h2><i class="icon-play"></i> Başlarken <small><i>What to click to make this work</i></small></h2>
+  <h2 class="item3"><i class="icon-play"></i> Başlarken <small><i>What to click to make this work</i></small></h2>
 
   <div class="row-fluid">
     <div class="span6 text-center img-paraloid">
@@ -533,7 +532,7 @@
 
 
 <section class="block-templates" id="modules_config">
-  <h2><i class="icon-cog"></i> Modülleri Yapılandırma</h2>
+  <h2 class="item4"><i class="icon-cog"></i> Modülleri Yapılandırma</h2>
 
     <p>İçerik bölümü ve modül pozisyonu - Joomla web sitesi düzeni iki ana bölüme ayrılmıştır  (Modül kontrol pozisyonları haritası aşşağıdaki mor bilgilerde yer alır). Joomla modülleri hazırlanmış pozisyonlara çıkış içeriği için kullanılmaktadır..</p>
   <div id="positions_map">
@@ -962,7 +961,7 @@
 
 
 <section id="extensions" class="block-templates">
-  <h2><i class="icon-fullscreen"></i> Eklentiler</h2>
+  <h2 class="item5"><i class="icon-fullscreen"></i> Eklentiler</h2>
 
   <p>Joomla web sitesi işlevi çeşitli Joomla eklentileri kullanılarak gelişmiş olarak kullanılabilir. Bazıları çoğu zaman şablonlar ile kullanılmaktadır. Bu bölümde özel eklentiler ile çalışmayı öğreneceğiz.</p>
 
@@ -1087,7 +1086,7 @@
 </section>
 
 <section id="configuring-pages" class="block-templates">
-  <h2><i class="icon-wrench"></i> Yapılandırma Sayfası</h2>
+  <h2 class="item6"><i class="icon-wrench"></i> Yapılandırma Sayfası</h2>
   
     <!-- Gallery page -->
   
@@ -1134,7 +1133,7 @@
 
 
 <section id="template-settings">
-  <h2><i class="icon-cogs"></i> Şablon Ayarları</h2>
+  <h2 class="item7"><i class="icon-cogs"></i> Şablon Ayarları</h2>
 
   <p>Her Joomla Şablonunun yapılandırma seçenekleri bulunmaktadır. Onlar tema düzeni sınıfları, tipografi eklentileri, bazı ek özellikler vb kurulumlar için ayarlanabilir. Şablon yönetimine Joomla yönetim paneli üzerinden erişebilirsiniz.<b>Extensions > Template Manager</b> </p>
 
@@ -1188,7 +1187,7 @@
 
 
 <section id="addendum" class="block-templates">
-  <h2><i class="icon-question-sign"></i> Ek  <small>nereden yardım ve destek alabileceğiniz hakkında bilgiler.</small> </h2>
+  <h2 class="item8"><i class="icon-question-sign"></i> Ek  <small>nereden yardım ve destek alabileceğiniz hakkında bilgiler.</small> </h2>
 
   <p>Biz mümkün olduğu kadar bu belgeleri net olarak oluşturmak için elimizden gelenin en iyisini yaptık. Siz şablon veya belgeleri geliştirme, Joomla Şablonu veya herhangi bir öneri ile herhangi bir zorlukla karşılaştığınız taktirde destek ekibimizle temasa geçmek için çekinmeyin:</p>
   
