--- a/quick_guide/index_en.html
+++ b/quick_guide/index_en.html
@@ -7,24 +7,42 @@
 		<link href='//fonts.googleapis.com/css?family=Annie+Use+Your+Telescope' rel='stylesheet' type='text/css'>
 		<link href='//fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
 		<link href='//fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	    <script src="js/jquery.js"></script>
+	    <script src="js/jquery-ui-1.10.3.custom.js"></script>
+	    <script src="js/jquery-migrate-1.1.1.js"></script>
+	    <script src="js/jquery.transform-0.9.3.min.js"></script>
+	    <script src="js/jquery.easing.1.3.js"></script>
+		<script src="js/jquery.spritely.js"></script>
+		<script  src="js/script.js"></script>
+     
+	     <script>
+	      $(function() {
+	        jQuery( "#accordion" ).accordion({
+	           collapsible: true,
+	           heightStyle: "content",
+	           active: false
+	        });        
+	      });
+	    </script>
 	</head>
 	<body>
 		<div class="container">
-			<header class="guide-header">
-				<img src="images/human-icon-1.png" alt="Human icon 1">
-				<h1><span>Joomla! 3.x </span> Quick Start Guide</h1>
-				<p>Deploy Joomla! 3.x website in 3 simple steps</p>
-			</header>
+		<header id="header">
+	      <h1>
+	        <img src="images/human-icon-1.png" class="fleft_img" alt="">
+	        <img src="images/human-icon-6.png" class="fright_img"  alt="">
+	          <span class="title">Joomla! 3.x</span>
+	          Quick Start Guide
+	          <span class="subtitle">Deploy Joomla! 3.x website in 3 simple steps</span>
+	      </h1> 
+	    </header>
 
 			<section class="guide-sections">
 				
-				<article id="step-1" class="guide-article">
-					<header>
-						<h2>Step 1. Extract and Upload files</h2>
-					</header>
+    		<dl id="accordion">
+					<dt><a href="#">Step 1. Extract and Upload files</a></dt>
 
+					<dd class="quick-guide" id="step-1">
 					<div class="grid grid-1">
 						<div class="col-1">
 							<img class="guide-img" src="images/art1-img1.jpg" alt="Step 1. Template files structure">
@@ -49,15 +67,13 @@
 					<div class="guide-note">
 						<p><span>Note:</span>  you can extract fullpackage.zip directory to your server with joomla/unzip.php file. Upload it to your server and access using your browser address bar.   </p>
 					</div>
-				</article>
+					</dd>
 
 
-				<article id="step-2" class="guide-article">
-					<header>
-						<h2>Step 2.  create database</h2>
-					</header>
+					<dt><a href="#">Step 2.  create database</a></dt>
 
-					<div class="grid grid-2">
+					<dd class="quick-guide">
+					<div class="grid grid-2" id="step-2">
 						<img class="arrow-right-1" src="images/arrow-2.png" alt="Arrow Right">
 						<img class="arrow-right-2" src="images/arrow-2.png" alt="Arrow Right">
 						<div class="col-1">
@@ -86,15 +102,13 @@
 							</figure>
 						</div>
 					</div>
-				</article>
+				</dd>
 
 
-				<article id="step-3" class="guide-article">
+				<dt><a href="#">Step 3.  Start Joomla! installation</a></dt>
+				<dd class="quick-guide" id="step-3">
 				<img class="arrow-bottom-1" src="images/arrow-3.png" alt="Arrow Bottom">
 				<img class="arrow-bottom-2" src="images/arrow-3.png" alt="Arrow Bottom">
-					<header>
-						<h2>Step 3.  Start Joomla! installation</h2>
-					</header>
 					<p>Open web browser and type your Joomla! directory link <span class="marked"> http://path_to_your_joomla_directory</span> </p>
 
 					<div class="article-step article-step__1">
@@ -106,7 +120,7 @@
 									</div>
 									<img src="images/human-icon-2.png" alt="Human icon 2">
 								</div>
-								<h3>At the first installation step you need to input Joomla website name and description. </h3>
+								<h4>At the first installation step you need to input Joomla website name and description. </h4>
 								<p class="list-desc">Into the right column fields please input website administrator details:</p>
 								<ul>
 									<li> - email address</li>
@@ -132,7 +146,7 @@
 									</div>
 									<img src="images/human-icon-3.png" alt="Human icon 3">
 								</div>
-								<h3>At the second step you need input database details:</h3>
+								<h4>At the second step you need input database details:</h4>
 								<ul>
 									<li> - database type</li>
 									<li> - host name</li>
@@ -163,7 +177,7 @@
 									</div>
 									<img src="images/human-icon-4.png" alt="Human icon 4">
 								</div>
-								<h3>You are almost done! On the third step select sample data you want to install.</h3>
+								<h4>You are almost done! On the third step select sample data you want to install.</h4>
 								<p>To make your template appear as at the preview page select sample_theme### option. (### is the number of your theme)</p>
 								<p>Before clicking Install button make sure your server matches Joomla! requirements.</p>
 							</div>
@@ -191,17 +205,12 @@
 								<img class="guide-img" src="images/art3-img4.jpg" alt="Step 3. Overview">
 							</div>
 						</div>
-					</div>		
-				</article>
-
-				<article id="step-4" class="guide-article">
-					<header>
-						<h2>congratulations!</h2>
-					</header>
-					<div class="grid grid-3">
+					</div>
+					<div class="article-step article-step__4">
+						<div class="grid grid-3">
 						<div class="col-1">
 							<img class="human-icon" src="images/human-icon-6.png" alt="Human icon 6">
-							<h3 class="custom">Well done! Joomla is now installed.</h3>
+							<h4 class="custom">Well done! Joomla is now installed.</h4>
 							<p>Click Remove installation button to delete 'installation' directory.</p>
 							<p>Use 'Site' button to access your Joomla website or 'Administrator' button to get to the administration panel. </p>
 						</div>
@@ -211,8 +220,9 @@
 					</div>	
 					<div class="the-end">
 						<span>the end</span>
-					</div>					
-				</article>
+					</div>
+					</div>	
+				</dd>
 			</section>
 		</div>
 	</body>
