--- a/quick_guide/index_en.html
+++ b/quick_guide/index_en.html
@@ -70,7 +70,7 @@
 					</dd>
 
 
-					<dt><a href="#">Step 2.  create database</a></dt>
+					<dt><a href="#">Step 2.  Create database</a></dt>
 
 					<dd class="quick-guide">
 					<div class="grid grid-2" id="step-2">
