--- a/index_en.html
+++ b/index_en.html
@@ -49,9 +49,10 @@
         </ul>
       </div>
       <div id="versions" class="select-menu pull-right">
-        <div class="select-menu_icon"><b>v3-0</b><i class="icon-angle-down"></i></div>
+        <div class="select-menu_icon"><b>v3-1</b><i class="icon-angle-down"></i></div>
         <ul class="select-menu_list">
-          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-0/index_en.html"><span>v3-0</span></a></li>
+          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-1/index_en.html"><span>v3-1</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v3-0/index_en.html"><span>v3-0</span></a></li>
           <li><a href="/help/quick-start-guide/joomla-templates/v2-4/index_en.html"><span>v2-4</span></a></li>
           <li><a href="/help/quick-start-guide/joomla-templates/v2-3/index_en.html"><span>v2-3</span></a></li>
         </ul>
