--- a/index_tr.html
+++ b/index_tr.html
@@ -17,8 +17,8 @@
   <script src="js/prettify.js"></script>
   <script src="js/jquery.flexslider.js"></script>
   <script src="js/bootstrap-affix.js"></script>
-  <script type="text/javascript" src="js/jquery.prettyPhoto.js"></script> 
-    <script src="js/scripts.js"></script>
+  <script src="js/jquery.prettyPhoto.js"></script> 
+    <script src="js/script.js"></script>
 
     <!--[if IE 8]>
     <link rel="stylesheet" href="css/ie.css" />
@@ -44,14 +44,15 @@
   </article> 
   <article class="span2">  
        <div id="languages" class="select-menu pull-right">
-        <div class="select-menu_icon"><b>En</b><i class="icon-angle-down"></i></div>
+        <div class="select-menu_icon"><b>Tr</b><i class="icon-angle-down"></i></div>
         <ul class="select-menu_list">
         </ul>
       </div>
       <div id="versions" class="select-menu pull-right">
         <div class="select-menu_icon"><b>v3-0</b><i class="icon-angle-down"></i></div>
         <ul class="select-menu_list">
-          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-0/index_tr.html"><span>v3-0</span></a></li>
+          <li class="active"><a href="/help/quick-start-guide/joomla-templates/v3-1/index_tr.html"><span>v3-1</span></a></li>
+          <li><a href="/help/quick-start-guide/joomla-templates/v3-0/index_tr.html"><span>v3-0</span></a></li>
           <li><a href="/help/quick-start-guide/joomla-templates/v2-4/index_tr.html"><span>v2-4</span></a></li>
           <li><a href="/help/quick-start-guide/joomla-templates/v2-3/index_tr.html"><span>v2-3</span></a></li>
         </ul>
