--- a/index_ru.html
+++ b/index_ru.html
@@ -1288,7 +1288,7 @@ defined('_JEXEC') or die;
 <section id="addendum" class="block-templates">
   <h2><i class="icon-question-sign"></i> Дополнение. Куда обращаться за помощью, поддержкой и дополнительной информацией</h2>
 
-  <p>Мы постаралась сделать данную документацию как можно более доступной и понятной. Тем не менее, в случае возникновения любых сложностей с Joomla шаблоном, предложений по улучшению шаблонов или документации, с командой технической поддержки можно связаться следующим образом:</p>
+  <p>Мы постарались сделать данную документацию как можно более доступной и понятной. Тем не менее, в случае возникновения любых сложностей с Joomla шаблоном, предложений по улучшению шаблонов или документации, с командой технической поддержки можно связаться следующим образом:</p>
   
   <div id="help_support">
     <h4>Помощь и поддержка</h4>
